# risk-scoring-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboards/: .gitkeep  risk-scoring.json
dashboards/provisioning/dashboards/: default.yml
docs/: design.md
infra/: docker-compose.yml  prometheus.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
models/: metadata.json
scripts/: .gitkeep  demo.py  loadtest.js  train.py
services/: __init__.py
services/api/: Dockerfile  __init__.py  dependencies.py  main.py  middleware.py
services/api/routes/: dlq.py  events.py  health.py  metrics.py  scores.py
services/scorer/: Dockerfile  __init__.py  features.py  main.py  processor.py  retry.py  scoring.py
shared/: __init__.py  config.py  enums.py  features.py  kafka.py  metrics.py  model.py  schemas.py  utils.py
shared/db/: __init__.py  models.py  session.py
shared/schemas/: login_event.json  login_payload.json  signup_event.json  signup_payload.json  transaction_event.json  transaction_payload.json
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_schema_contracts.py
tests/e2e/: __init__.py  test_pipeline.py
tests/integration/: __init__.py  test_api_db.py  test_worker_db.py
tests/smoke/: test_quickstart.py
tests/unit/: __init__.py  test_api_routes.py  test_config.py  test_db_models.py  test_demo.py  test_enums.py  test_feature_computation.py  test_features.py  test_kafka.py  test_metrics.py  test_model.py  test_placeholder.py  test_schemas.py  test_scoring.py  test_training.py  test_utils.py  test_worker.py
