[project]
name = "risk-scoring-pipeline"
version = "0.1.0"
description = "Real-time risk scoring platform with streaming pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Kafka/Redpanda
    "confluent-kafka>=2.3.0",

    # ML
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",

    # Observability
    "prometheus-client>=0.19.0",

    # Utilities
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",

    # Linting/formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",

    # Type stubs
    "types-python-dateutil>=2.8.19",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "shared*"]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: fast unit tests (no docker)",
    "contract: schema/contract tests",
    "integration: requires docker deps (postgres/redpanda)",
    "e2e: end-to-end pipeline tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["services", "shared"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["*.js", "*.json"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["services", "shared"]

# ============================================================================
# mypy configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "sklearn.*",
]
ignore_missing_imports = true
